--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,5 @@
-@import "./reset";
+@import "reset";
+@import "config/colors";
+@import "modules/sidebar.scss";
+@import "modules/content.scss";
+@import "font-awesome";
