--- a/app/assets/stylesheets/modules/sidebar.scss
+++ b/app/assets/stylesheets/modules/sidebar.scss
@@ -1,57 +1,58 @@
 .sidebar{
-  height:100vh;
   width: 300px;
+  height: 100vh;
   float:left;
-}
-.sidebar__header {
-  height: 10%;
-  width: 100%;
-  background-color:$dark-blue;
-    &__name {
-      font-size:16px;
-      font-weight: bold;
-      color: $white;
-      padding-top:35px;
-      padding-left:20px;
-      float:left;
-    }
-    &__icon{
-      float:right;
-      padding-top: 35px;
-      padding-right:20px;
-      &__edit{
-        float: left;
-        a{
-          color:$white;
-          font-size:1.2em;
-        }
-      }
-      &__cog{
-        margin-left: 5px;
+  &__header {
+    height: 130px;
+    width: 100%;
+    background-color:$dark-blue;
+      &__name {
+        font-size: 16px;
+        font-weight: bold;
+        color: $white;
+        padding-top: 50px;
+        padding-left: 20px;
         float:left;
-        a{
-          color:$white;
-          font-size:1.2em;
+      }
+      &__icon{
+        float:right;
+        padding-top: 50px;
+        padding-right: 20px;
+        &__edit{
+          float: left;
+          a{
+            color:$white;
+            font-size: 1.2em;
+          }
+        }
+        &__cog{
+          margin-left: 5px;
+          float:left;
+          a{
+            color:$white;
+            font-size: 1.2em;
+          }
         }
       }
-    }
-}
-.sidebar__content{
-  height:90%;
-  width:100%;
-  background-color:$navy;
+  }
+  &__group{
+    height:825px;
+    width:100%;
+    background-color:$navy;
 
-    &__name{
-      font-size:15px;
-      color:$white;
-      padding-top:20px;
-      padding-left:20px;
-    }
-    &__message {
-      font-size:11px;
-      color:$white;
-      padding-top:5px;
-      padding-left:20px;
-      margin-bottom:40px;
-    }
+      &__name{
+        font-size:15px;
+        color:$white;
+        padding-top:20px;
+        padding-left:20px;
+      }
+      &__message {
+        font-size:11px;
+        color:$white;
+        padding-top:5px;
+        padding-left:20px;
+        margin-bottom:40px;
+      }
+  }
 }
+
