Edit partial templete
Add class for template

--- a/app/views/messages/_groups.html.haml
+++ b/app/views/messages/_groups.html.haml
@@ -1,4 +1,3 @@
-%p.sidebar__group__name GROUP1
-%p.sidebar__group__message まだメッセージはありません
-%p.sidebar__group__name GROUP2
-%p.sidebar__group__message まだメッセージはありません
+.sidebar__group__box
+  %p.sidebar__group__box__name GROUP1
+  %p.sidebar__group__box__message まだメッセージはありません
