--- a/app/views/messages/_messages.html.haml
+++ b/app/views/messages/_messages.html.haml
@@ -1,4 +1,5 @@
-.content__main__name
-  aoki
-  %p.content__main__message nemui
-%p.content__main__time 2018/06/04 06:17:14
+.content__main__message-box
+  .content__main__message-box__name
+    %p aoki
+    %p.content__main__message-box__message nemui
+  %p.content__main__message-box__time 2018/06/04 06:17:14
