--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,6 @@
 @import "modules/sidebar.scss";
 @import "modules/content.scss";
 @import "font-awesome";
+@import "modules/user";
+@import "config/colors";
+@import "modules/flash";
