--- a/app/assets/stylesheets/config/colors.scss
+++ b/app/assets/stylesheets/config/colors.scss
@@ -7,3 +7,10 @@ $light-blue:#38AEF0;
 $deep-silver:#eeeeee;
 $midle-silver:#999999;
 $black:#434A54;
+
+$white2: #fff;
+$side_blue_dark: #253141;
+$side_blue_light: #2f3e51;
+$light_gray: #999;
+$black: #434a54;
+$alert_orange: #F35500;
