--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -7,8 +7,8 @@
           = link_to "#" do
             = fa_icon"edit"
         %li.sidebar__header__icon__cog
-          = link_to "#" do
-            = fa_icon"cog"
+          = link_to edit_user_path(current_user) do
+            = fa_icon"cog",class: "icon"
     .sidebar__group
       = render partial: "groups"
   .content
