--- a/app/views/messages/_messages.html.haml
+++ b/app/views/messages/_messages.html.haml
@@ -1,5 +1,11 @@
-.content__main__message-box
-  .content__main__message-box__name
-    %p aoki
-    %p.content__main__message-box__message nemui
-  %p.content__main__message-box__time 2018/06/04 06:17:14
+.message
+  .upper-message
+    .upper-message__user-name
+      = message.user.name
+    .upper-message__date
+      = message.created_at
+  .lower-meesage
+    - if message.content.present?
+      %p.lower-message__content
+        = message.content
+    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
