--- a/app/assets/stylesheets/modules/content.scss
+++ b/app/assets/stylesheets/modules/content.scss
@@ -41,47 +41,52 @@
     border-top: $silver;
     background-color: $gray;
     overflow:scroll;
-      &__message-box{
+    .message{
         padding-left: 40px;
         padding-top: 40px;
-          &__name{
+        padding-bottom:40px;
+        position: relative;
+      .upper-message{
+          &__user-name{
             font-size: 16px;
             color: $black;
             font-weight: bold;
-            float: left;
+            float:left;
           }
-          &__message{
-            margin-top: 10px;
-            font-size: 14px;
-            color:$black;
-            font-weight: normal;
-          }
-          &__time{
-            padding-left:10px;
-            font-size: 12px;
-            color: $midle-silver;
-            float: left;
+          &__date{
+            font-size:12px;
+            color:$midle-silver;
+            float:left;
           }
       }
+      .lower-meesage{
+        font-size: 14px;
+        color:$black;
+        font-weight: normal;
+        position: absolute;
+        bottom:0;
+
+      }
+    }
   }
   &__bottom{
     height: 95px;
     width: 100%;
     background-color: $silver;
     position: relative;
-    .message-box{
+    .form__message{
       width: 1170px;
       height: 50px;
       position: absolute;
       top: 25px;
       left: 40px
     }
-      .fa-picture-o{
+      .icon{
         position: absolute;
         top: 45px;
         right: 200px;
       }
-    .submit{
+    .form__submit{
       width: 100px;
       height: 55px;
       font-size: 20px;
