--- a/app/assets/stylesheets/modules/sidebar.scss
+++ b/app/assets/stylesheets/modules/sidebar.scss
@@ -35,24 +35,47 @@
         }
       }
   }
-  &__group__box{
-    height:825px;
-    width:100%;
-    background-color:$navy;
-
+  .sidebar__group__box{
+    height: calc(100vh - 130px);
+    overflow: scroll;
+    .group{
+      // height: 825px;
+      width: 100%;
+      background-color: $navy;
+      padding-bottom: 40px;
       &__name{
         font-size:15px;
         color:$white;
         padding-top:20px;
         padding-left:20px;
       }
-      &__message {
+      &__message{
         font-size:11px;
         color:$white;
         padding-top:5px;
         padding-left:20px;
-        margin-bottom:40px;
+        // margin-bottom:40px;
       }
   }
+  }
+  // &__group-box__index{
+  //   height:825px;
+  //   width:100%;
+  //   background-color:$navy;
+
+  //     &__name{
+  //       font-size:15px;
+  //       color:$white;
+  //       padding-top:20px;
+  //       padding-left:20px;
+  //     }
+  //     &__message {
+  //       font-size:11px;
+  //       color:$white;
+  //       padding-top:5px;
+  //       padding-left:20px;
+  //       margin-bottom:40px;
+  //     }
+  // }
 }
 
