--- a/app/assets/stylesheets/modules/content.scss
+++ b/app/assets/stylesheets/modules/content.scss
@@ -36,7 +36,7 @@
       }
   }
   &__main{
-    height: 730px;
+    height: calc(100vh - 130px - 95px);
     width: 100%;
     border-top: $silver;
     background-color: $gray;
