Fix  index file in messages

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,5 +1,5 @@
 .wrapper
-  = render  "sidebar"
+  = render partial: 'shared/sidebar'
   .content
     .content__header
       .content__header__name
